--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-libgtop2
+libgtop2.0
 ------------------------------------------
 GNOME cross-platform system monitoring library
 
@@ -8,25 +8,24 @@ there are bugs in the sysdeps backend, in addition to a
 number of features which are not available on all platforms.
 
 Runtime requirements:
-  cygwin-1.5.24-2
-  glib2-2.12.9-1
-  libXau6-1.0.2-2
-  libintl8-0.15-1
+  cygwin-1.5.25-15
+  libglib2.0_0-2.18.3-1
+  libintl8-0.17-2
+  libXau6-1.0.4-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.24-2
-  autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
-  binutils-20060817-1
-  cygport-0.2.9-1
-  gawk-3.1.5-4
+  autoconf2.5-2.63-1
+  automake1.9-1.9.6-3
+  binutils-20080624-2
+  cygport-0.4.3-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
-  gtk-doc-1.7-1
-  intltool-0.35.1-1
+  gtk-doc-1.11-1
+  intltool-0.40.5-1
   libtool1.5-1.5.23a-2
   make-3.81-1
-  pkg-config-0.21-1
+  pkg-config-0.23a-2
   sed-4.1.5-2
 
 Canonical website:
@@ -38,33 +37,30 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libgtop2-2.14.7-X-src.tar.bz2
+  unpack libgtop2.0-2.24.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libgtop2-2.14.7-X.cygport all
+  cygport ./libgtop2.0-2.24.0-X.cygport all
 
 This will create:
-  /usr/src/libgtop2-2.14.7-X-src.tar.bz2
-  /usr/src/libgtop2-2.14.7-X.tar.bz2
-  /usr/src/libgtop2-devel-2.14.7-X.tar.bz2
-  /usr/src/libgtop2-doc-2.14.7-X.tar.bz2
+  /usr/src/libgtop2.0-2.24.0-X-src.tar.bz2
+  /usr/src/libgtop2.0-devel-2.24.0-X.tar.bz2
+  /usr/src/libgtop2.0_7-2.24.0-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
+Files included in the binary packages:
 
-  /etc/postinstall/libgtop2.sh
+(libgtop2.0_7)
   /usr/bin/cyggtop-2.0-7.dll
-  /usr/share/doc/Cygwin/libgtop2-2.14.7.README
-  /usr/share/doc/libgtop2-2.14.7/AUTHORS
-  /usr/share/doc/libgtop2-2.14.7/COPYING
-  /usr/share/doc/libgtop2-2.14.7/COPYRIGHT.txt
-  /usr/share/doc/libgtop2-2.14.7/ChangeLog
-  /usr/share/doc/libgtop2-2.14.7/INSTALL
-  /usr/share/doc/libgtop2-2.14.7/NEWS
-  /usr/share/doc/libgtop2-2.14.7/README
-  /usr/share/info/libgtop2.info.gz
+  /usr/share/doc/libgtop2.0-2.24.0/AUTHORS
+  /usr/share/doc/libgtop2.0-2.24.0/COPYING
+  /usr/share/doc/libgtop2.0-2.24.0/COPYRIGHT.txt
+  /usr/share/doc/libgtop2.0-2.24.0/ChangeLog
+  /usr/share/doc/libgtop2.0-2.24.0/INSTALL
+  /usr/share/doc/libgtop2.0-2.24.0/NEWS
+  /usr/share/doc/libgtop2.0-2.24.0/README
   /usr/share/locale/am/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/ar/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/az/LC_MESSAGES/libgtop-2.0.mo
@@ -110,11 +106,13 @@ Files included in the binary package:
   /usr/share/locale/mk/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/ml/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/mn/LC_MESSAGES/libgtop-2.0.mo
+  /usr/share/locale/mr/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/ms/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/nb/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/ne/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/nl/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/nn/LC_MESSAGES/libgtop-2.0.mo
+  /usr/share/locale/oc/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/or/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/pa/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/pl/LC_MESSAGES/libgtop-2.0.mo
@@ -127,7 +125,7 @@ Files included in the binary package:
   /usr/share/locale/sl/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/sq/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/sr/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sr@Latn/LC_MESSAGES/libgtop-2.0.mo
+  /usr/share/locale/sr@latin/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/sv/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/ta/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/te/LC_MESSAGES/libgtop-2.0.mo
@@ -140,7 +138,7 @@ Files included in the binary package:
   /usr/share/locale/zh_HK/LC_MESSAGES/libgtop-2.0.mo
   /usr/share/locale/zh_TW/LC_MESSAGES/libgtop-2.0.mo
 
-(libgtop2-devel)
+(libgtop2.0-devel)
   /usr/include/libgtop-2.0/glibtop.h
   /usr/include/libgtop-2.0/glibtop/close.h
   /usr/include/libgtop-2.0/glibtop/command.h
@@ -148,7 +146,6 @@ Files included in the binary package:
   /usr/include/libgtop-2.0/glibtop/fsusage.h
   /usr/include/libgtop-2.0/glibtop/global.h
   /usr/include/libgtop-2.0/glibtop/gnuserv.h
-  /usr/include/libgtop-2.0/glibtop/inodedb.h
   /usr/include/libgtop-2.0/glibtop/loadavg.h
   /usr/include/libgtop-2.0/glibtop/mem.h
   /usr/include/libgtop-2.0/glibtop/mountlist.h
@@ -158,6 +155,7 @@ Files included in the binary package:
   /usr/include/libgtop-2.0/glibtop/open.h
   /usr/include/libgtop-2.0/glibtop/parameter.h
   /usr/include/libgtop-2.0/glibtop/ppp.h
+  /usr/include/libgtop-2.0/glibtop/procaffinity.h
   /usr/include/libgtop-2.0/glibtop/procargs.h
   /usr/include/libgtop-2.0/glibtop/prockernel.h
   /usr/include/libgtop-2.0/glibtop/proclist.h
@@ -169,6 +167,7 @@ Files included in the binary package:
   /usr/include/libgtop-2.0/glibtop/procstate.h
   /usr/include/libgtop-2.0/glibtop/proctime.h
   /usr/include/libgtop-2.0/glibtop/procuid.h
+  /usr/include/libgtop-2.0/glibtop/procwd.h
   /usr/include/libgtop-2.0/glibtop/sem_limits.h
   /usr/include/libgtop-2.0/glibtop/shm_limits.h
   /usr/include/libgtop-2.0/glibtop/signal.h
@@ -184,8 +183,6 @@ Files included in the binary package:
   /usr/lib/libgtop-2.0.dll.a
   /usr/lib/libgtop-2.0.la
   /usr/lib/pkgconfig/libgtop-2.0.pc
-
-(libgtop2-doc)
   /usr/share/gtk-doc/html/libgtop/home.png
   /usr/share/gtk-doc/html/libgtop/index.html
   /usr/share/gtk-doc/html/libgtop/index.sgml
@@ -194,7 +191,6 @@ Files included in the binary package:
   /usr/share/gtk-doc/html/libgtop/libgtop-Command.html
   /usr/share/gtk-doc/html/libgtop/libgtop-GlibTop-Server.html
   /usr/share/gtk-doc/html/libgtop/libgtop-GlibTop.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-Inode-DB.html
   /usr/share/gtk-doc/html/libgtop/libgtop-Net-List.html
   /usr/share/gtk-doc/html/libgtop/libgtop-Net-Load.html
   /usr/share/gtk-doc/html/libgtop/libgtop-PPP.html
@@ -234,10 +230,14 @@ Files included in the binary package:
   /usr/share/gtk-doc/html/libgtop/right.png
   /usr/share/gtk-doc/html/libgtop/style.css
   /usr/share/gtk-doc/html/libgtop/up.png
+  /usr/share/info/libgtop2.info.gz
 
 ------------------
 
 Port Notes:
+
+----- version 2.24.0-1 -----
+Version bump for GNOME 2.24.
 
 ----- version 2.14.7-1 -----
 Version bump.
