--- a/README
+++ b/README
@@ -8,26 +8,26 @@ there are bugs in the sysdeps backend, in addition to a
 number of features which are not available on all platforms.
 
 Runtime requirements:
-  cygwin-1.7.0-45
-  libgcc1-4.3.2-2
-  libglib2.0_0-2.20.0-1
-  libintl8-0.17-10
-  libXau6-1.0.4-10
+  cygwin-1.7.0-62
+  libgcc1-4.3.4-1
+  libglib2.0_0-2.22.2-1
+  libintl8-0.17-11
+  libXau6-1.0.5-1
 
 Build requirements:
 (besides corresponding -devel packages)
   autoconf2.5-2.63-10
-  automake1.10-1.10.1-10
-  binutils-20080624-2
-  cygport-0.9.6-1
-  gawk-3.1.6-2
-  gcc4-core-4.3.2-2
+  automake1.11-1.11-10
+  binutils-2.19.51-1
+  cygport-0.9.10-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-1
   gtk-doc-1.11-2
-  gnome-common-2.26.0-1
+  gnome-common-2.28.0-1
   intltool-0.40.6-1
-  libtool-2.2.7a-12
+  libtool-2.2.7a-14
   make-3.81-2
-  pkg-config-0.23a-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
 
 Canonical website:
@@ -39,205 +39,23 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libgtop2.0-2.26.1-X-src.tar.bz2
+  unpack libgtop2.0-2.28.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libgtop2.0-2.26.1-X.cygport all
+  cygport ./libgtop2.0-2.28.0-X.cygport all
 
 This will create:
-  /usr/src/libgtop2.0-2.26.1-X-src.tar.bz2
-  /usr/src/libgtop2.0-devel-2.26.1-X.tar.bz2
-  /usr/src/libgtop2.0_7-2.26.1-X.tar.bz2
+  /usr/src/libgtop2.0-2.28.0-X-src.tar.bz2
+  /usr/src/libgtop2.0-devel-2.28.0-X.tar.bz2
+  /usr/src/libgtop2.0_7-2.28.0-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary packages:
-
-(libgtop2.0_7)
-  /usr/bin/cyggtop-2.0-7.dll
-  /usr/share/doc/libgtop2.0/AUTHORS
-  /usr/share/doc/libgtop2.0/COPYING
-  /usr/share/doc/libgtop2.0/ChangeLog
-  /usr/share/doc/libgtop2.0/NEWS
-  /usr/share/doc/libgtop2.0/README
-  /usr/share/locale/am/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ar/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/as/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/az/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/be/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/bg/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/bn/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/bn_IN/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/bs/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ca/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/cs/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/cy/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/da/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/de/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/dz/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/el/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/en_CA/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/en_GB/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/eo/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/es/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/et/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/eu/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/fa/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/fi/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/fr/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ga/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/gl/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/gu/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/he/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/hi/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/hr/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/hu/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/id/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/it/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ja/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ka/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/kn/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ko/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ku/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ky/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/la/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/lt/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/lv/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/mg/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/mi/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/mk/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ml/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/mn/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/mr/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ms/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/nb/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ne/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/nl/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/nn/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/oc/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/or/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/pa/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/pl/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/pt/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/pt_BR/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ro/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ru/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/rw/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sk/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sl/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sq/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sr/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sr@latin/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/sv/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/ta/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/te/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/th/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/tr/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/uk/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/vi/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/xh/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/zh_CN/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/zh_HK/LC_MESSAGES/libgtop-2.0.mo
-  /usr/share/locale/zh_TW/LC_MESSAGES/libgtop-2.0.mo
-
-(libgtop2.0-devel)
-  /usr/include/libgtop-2.0/glibtop.h
-  /usr/include/libgtop-2.0/glibtop/close.h
-  /usr/include/libgtop-2.0/glibtop/command.h
-  /usr/include/libgtop-2.0/glibtop/cpu.h
-  /usr/include/libgtop-2.0/glibtop/fsusage.h
-  /usr/include/libgtop-2.0/glibtop/global.h
-  /usr/include/libgtop-2.0/glibtop/gnuserv.h
-  /usr/include/libgtop-2.0/glibtop/loadavg.h
-  /usr/include/libgtop-2.0/glibtop/mem.h
-  /usr/include/libgtop-2.0/glibtop/mountlist.h
-  /usr/include/libgtop-2.0/glibtop/msg_limits.h
-  /usr/include/libgtop-2.0/glibtop/netlist.h
-  /usr/include/libgtop-2.0/glibtop/netload.h
-  /usr/include/libgtop-2.0/glibtop/open.h
-  /usr/include/libgtop-2.0/glibtop/parameter.h
-  /usr/include/libgtop-2.0/glibtop/ppp.h
-  /usr/include/libgtop-2.0/glibtop/procaffinity.h
-  /usr/include/libgtop-2.0/glibtop/procargs.h
-  /usr/include/libgtop-2.0/glibtop/prockernel.h
-  /usr/include/libgtop-2.0/glibtop/proclist.h
-  /usr/include/libgtop-2.0/glibtop/procmap.h
-  /usr/include/libgtop-2.0/glibtop/procmem.h
-  /usr/include/libgtop-2.0/glibtop/procopenfiles.h
-  /usr/include/libgtop-2.0/glibtop/procsegment.h
-  /usr/include/libgtop-2.0/glibtop/procsignal.h
-  /usr/include/libgtop-2.0/glibtop/procstate.h
-  /usr/include/libgtop-2.0/glibtop/proctime.h
-  /usr/include/libgtop-2.0/glibtop/procuid.h
-  /usr/include/libgtop-2.0/glibtop/procwd.h
-  /usr/include/libgtop-2.0/glibtop/sem_limits.h
-  /usr/include/libgtop-2.0/glibtop/shm_limits.h
-  /usr/include/libgtop-2.0/glibtop/signal.h
-  /usr/include/libgtop-2.0/glibtop/swap.h
-  /usr/include/libgtop-2.0/glibtop/sysdeps.h
-  /usr/include/libgtop-2.0/glibtop/sysinfo.h
-  /usr/include/libgtop-2.0/glibtop/union.h
-  /usr/include/libgtop-2.0/glibtop/uptime.h
-  /usr/include/libgtop-2.0/glibtop/version.h
-  /usr/include/libgtop-2.0/glibtop_machine.h
-  /usr/include/libgtop-2.0/glibtop_server.h
-  /usr/include/libgtop-2.0/libgtopconfig.h
-  /usr/lib/libgtop-2.0.dll.a
-  /usr/lib/libgtop-2.0.la
-  /usr/lib/pkgconfig/libgtop-2.0.pc
-  /usr/share/gtk-doc/html/libgtop/home.png
-  /usr/share/gtk-doc/html/libgtop/index.html
-  /usr/share/gtk-doc/html/libgtop/index.sgml
-  /usr/share/gtk-doc/html/libgtop/left.png
-  /usr/share/gtk-doc/html/libgtop/libgtop-Close.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-Command.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-GlibTop-Server.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-GlibTop.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-Net-List.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-Net-Load.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-PPP.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-Shared-Memory-Limits.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-Uptime.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-cpu.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-fsusage.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-lib.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-loadavg.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-mem.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-mountlist.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-msg-limits.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-open.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-parameter.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procargs.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-prockernel.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-proclist.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procmap.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procmem.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procopenfiles.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procsegment.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procsignal.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procstate.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-proctime.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-procuid.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-sem-limits.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-signal.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-swap.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-sysdeps.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-sysinfo.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-union.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-version.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-white-paper-overview.html
-  /usr/share/gtk-doc/html/libgtop/libgtop-white-paper.html
-  /usr/share/gtk-doc/html/libgtop/libgtop.devhelp
-  /usr/share/gtk-doc/html/libgtop/libgtop.devhelp2
-  /usr/share/gtk-doc/html/libgtop/right.png
-  /usr/share/gtk-doc/html/libgtop/style.css
-  /usr/share/gtk-doc/html/libgtop/up.png
-  /usr/share/info/libgtop2.info.gz
-
-------------------
-
 Port Notes:
+
+----- version 2.28.0-1 -----
+Version bump for GNOME 2.28.
 
 ----- version 2.26.1-1 -----
 Initial release of GNOME 2.26 for Cygwin 1.7.
